; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_cls.c_cmd_cls.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_cls.c_cmd_cls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"/?\00", align 1
@TRUE = common dso_local global i32 0, align 4
@STRING_CLS_HELP = common dso_local global i32 0, align 4
@StdOutScreen = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_cls(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @_T(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @_tcsncmp(i32 %4, i32 %5, i32 2)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @TRUE, align 4
  %10 = load i32, i32* @STRING_CLS_HELP, align 4
  %11 = call i32 @ConOutResPaging(i32 %9, i32 %10)
  store i32 0, i32* %2, align 4
  br label %14

12:                                               ; preds = %1
  %13 = call i32 @ConClearScreen(i32* @StdOutScreen)
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %12, %8
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @_tcsncmp(i32, i32, i32) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @ConOutResPaging(i32, i32) #1

declare dso_local i32 @ConClearScreen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
